[package]
name = "cli_ob"
version = "0.1.0"
edition = "2021"
description = "Real-time Binance Futures order book viewer in the terminal"
license = "MIT"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
ordered-float = "4.0"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
crossterm = "0.27"
ratatui = "0.29"

[profile.release]
opt-level = 3
lto = true